[package]
name = "alt"
version = "1.2.0"
description = "A tool for switching between different version so commands based on the current directory."
authors = ["Boris Bera <bera.boris@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

build = "build.rs"
publish = false

[package.metadata.deb]
assets = [
    ["target/release/alt", "usr/bin/alt", "755"],
    ["README.md", "usr/share/doc/alt/README.md", "644"],
    ["etc/profile.d/alt.sh", "etc/profile.d/alt.sh", "644"],
    ["etc/fish/conf.d/alt.fish", "etc/fish/conf.d/alt.fish", "644"],
    ["target/release/completion/alt.fish", "etc/fish/completions/alt.fish", "644"],
    ["target/release/completion/alt.bash", "etc/bash_completion.d/alt", "644"],
    ["target/release/completion/_alt", "usr/share/zsh/vendor-completions/_alt", "644"]
]

[profile.release]
lto = true

[dependencies]
toml = "0.5.9"
console = "0.15.0"
lazy_static = "1.4.0"
dialoguer = "0.10.1"
glob = "0.3.0"

[dependencies.clap]
version = "3.1.18"
default-features = true
features = ["cargo"]

[dependencies.regex]
version = "1"
default-features = false
features = ["std", "perf", "unicode-perl"]

[dev-dependencies]
assert_cmd = "2.0"
escargot = "0.5"
predicates = "2.1.0"
rand = "0.8"

[build-dependencies]
clap = "3.1.18"
clap_complete = "3.2.0"
