[package]
name = "alt"
version = "1.2.1"
description = "A tool for switching between different version so commands based on the current directory."
authors = ["Boris Bera <bera.boris@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

build = "build.rs"
publish = false

[package.metadata.deb]
assets = [
    ["target/release/alt", "usr/bin/alt", "755"],
    ["README.md", "usr/share/doc/alt/README.md", "644"],
    ["etc/profile.d/alt.sh", "etc/profile.d/alt.sh", "644"],
    ["etc/fish/conf.d/alt.fish", "etc/fish/conf.d/alt.fish", "644"],
    ["target/release/completion/alt.fish", "etc/fish/completions/alt.fish", "644"],
    ["target/release/completion/alt.bash", "etc/bash_completion.d/alt", "644"],
    ["target/release/completion/_alt", "usr/share/zsh/vendor-completions/_alt", "644"],
    ["target/release/man/*.1", "usr/share/man/man1/", "644"],
]

[profile.release]
lto = true

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.32", features = ["cargo", "wrap_help"] }
toml = "0.5.10"
console = "0.15.4"
lazy_static = "1.4.0"
dialoguer = "0.10.2"
glob = "0.3.1"
thiserror = "1.0"

[dependencies.regex]
version = "1"
default-features = false
features = ["std", "perf", "unicode-perl"]

[dev-dependencies]
assert_cmd = "2.0"
escargot = "0.5"
insta = { version = "1.24.1", features = ["filters", "toml"] }
predicates = "2.1.5"
rand = "0.8"
serde = "1.0.152"
test-case = "2.2.2"
tempfile = "3"

[build-dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
clap_complete = "4.0.7"
clap_mangen = "0.2.6"
